@@ -1,3 +1,5 @@
+2005/12/8 -- released version 20051208_trunk
+
 2005/12/7 -- released version 20051207_trunk
 
 2005/12/6 -- released version 20051206_trunk
